docs(notes.md): 增加 Sentinel Dashboard 控制台